src/plugins/quick-tester/quick-tester.less
.QuickTesterDisplay {
  width: 50%;
  margin: 0 auto;

  @media @edu-media-phone {
    width: 100%;
  }
}

.QuickTesterDisplay-content {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.QuickTesterDisplay-controlPanel {
  width: 100%;
  padding: 5px;
  display: flex;
  flex-wrap: wrap;
  margin-top: 15px;
  align-items: center;
  justify-content: space-between;
}

.QuickTesterDisplay-cards {
  margin-right: @edu-control-spacing-wide;
}

.QuickTesterDisplay-radioGroup {
  margin-top: 15px !important;
}

.QuickTesterDisplay-radioButton {
  display: flex;
  user-select: none;
  justify-content: center;
}

.QuickTesterDisplay-test {
  min-height: 200px;
  margin-top: 15px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  border-radius: @edu-border-radius-base;
  border: 1px solid @edu-border-color-light;
}

.QuickTesterDisplay-randomTestsIcon {
  margin-left: 5px;
  font-size: @edu-font-size-xs;
}

.QuickTesterEditor {}

.QuickTesterEditor-testContent {
  display: grid;
  grid-auto-flow: row;
  gap: 10px;
}

.QuickTesterEditor-testContentLabel {
  display: block;
  margin-bottom: 5px;
}

